--- a/src/App.css
+++ b/src/App.css
@@ -870,7 +870,7 @@ iframe {
   
   .date {
     font-size: 24px;
-    margin-bottom: 25px;
+    margin-bottom: 15%;
   }
 
   .carta-container.full-view {
