--- a/src/navBar.css
+++ b/src/navBar.css
@@ -132,7 +132,7 @@
 .navbar-mobile-background {
     position: fixed;
     top: 0;
-    right: 0%;
+    right: -100%;
     width: 80%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.886);
@@ -151,11 +151,21 @@
     padding: 2%;
 }
 
+.navbar-mobile-sections-home {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 10%;
+}
+
 .navbar-mobile-space {
-    margin-top: 8%;
+    margin-top: 6%;
 }
 
 .navbar-mobile-sections .btn-cat-nav {
+    flex: 1;
+}
+.navbar-mobile-sections-home .btn-cat-nav {
     flex: 1;
 }
 
@@ -166,13 +176,52 @@
   gap: 15px;
   width: 100%;
   flex-wrap: wrap;
-  right: 0;
-  margin-top: 3%;
+  margin-bottom: 14%;
 }
 .btn-cat-nav.inicio {
     border-bottom: 1px solid var(--mostaza);
     padding-bottom: 5%;
     margin-bottom: 2%;
+}
+.navbar-mobile-background.active {
+  right: 0; /* O usa transform: translateX(-100%) si prefieres */
+}
+
+@media (max-height: 500px) {
+  .navbar-mobile-sections {
+      display: grid;
+      /* Se adapta al ancho: si caben dos botones de 140px, los pone, si no, uno */
+      grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+      
+      grid-auto-rows: min-content; 
+      
+      justify-content: center;
+      align-content: start; 
+      
+      gap: 15px;
+  }
+
+  .navbar-mobile-sections-home {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    padding-bottom: 5%;
+  }
+
+  .btn-cat-nav {
+      height: 60px; /* Altura fija para que el grid sea simétrico */
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+}
+
+@media (min-width: 1301px) {
+  .navbar-mobile-background {
+    display: none;
+  }
 }
 
 /* --- RESPONSIVE MÓVIL (Media Query) --- */
@@ -182,43 +231,17 @@
   }
 
   .navbar-menu {
-    position: fixed;
-    top: 0;
-    right: -100%; /* Escondido a la derecha */
-    width: 80%;
-    height: 100vh;
-    padding-top: 7%;
-    padding-bottom: 100px;
-    gap: 30px;
-    background-color: rgba(0, 0, 0, 0.886);
-
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    grid-auto-rows: min-content;
-
-    align-items: center;
-    justify-content: flex-start;
-
-    gap: 20px;
-    transition: 0.4s;
-    z-index: 1500;
-    overflow-y: auto;
+    display: none;
   }
-
   .navbar-idiomas {
-    position: fixed;
-    right: -100%;
-    width: 80%;
-    margin-top: 100%;
-    display: flex;
-    justify-content: center;
-    transition: 0.4s;
-    z-index: 1501;
+    display: none;
   }
 
   .navbar-menu.active {
     right: 0; /* Ambos entran a la vez */
   }
+
+  
 
   /* Animación de las rayas a X cuando se abre */
   .hamburger.open span:nth-child(1) { transform: rotate(45deg) translate(5px, 6px); }
